--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 python-binance==1.0.17
 python-dotenv==1.0.0
 pandas==2.1.1
-numpy==1.24.3
+numpy>=1.26.0,<2.2.0
 requests==2.31.0
 ccxt==4.1.13
 python-telegram-bot==20.7
 asyncio==3.4.3
 aiohttp==3.9.1
-setuptools>=68.2.2 
+setuptools>=78.1.0 
