--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ pandas==2.0.3
 requests==2.31.0
 ccxt==4.1.13
 python-telegram-bot==20.7
-aiohttp==3.9.1
-setuptools>=78.1.0 
+setuptools>=65.5.1
+wheel>=0.38.0 
