Update Vercel configuration to use Python 3.9 runtime

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ ccxt==4.1.13
 python-telegram-bot==20.7
 setuptools>=65.5.1
 wheel>=0.38.0
-distutils-precedence>=0.1.0 
+distutils-precedence>=0.1.0
+werkzeug==1.0.1 
