--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "telegram_bot.py",
       "use": "@vercel/python@3.1.0",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
       }
     }
   ],
