--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "telegram_bot.py",
+      "src": "api/webhook.py",
       "use": "@vercel/python@3.1.0",
       "config": {
         "maxLambdaSize": "15mb"
@@ -11,8 +11,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "telegram_bot.py"
+      "src": "/api/webhook",
+      "dest": "/api/webhook.py"
     }
   ]
 } 
