--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,20 @@
       "src": "api/webhook.py",
       "use": "@vercel/python@3.1.0",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
       }
     }
   ],
   "routes": [
     {
       "src": "/api/webhook",
-      "dest": "/api/webhook.py"
+      "dest": "/api/webhook.py",
+      "methods": ["POST"]
     }
-  ]
+  ],
+  "env": {
+    "TELEGRAM_TOKEN": "@telegram-token",
+    "TELEGRAM_CHAT_ID": "@telegram-chat-id"
+  }
 } 
