--- a/vercel.json
+++ b/vercel.json
@@ -13,12 +13,18 @@
   "routes": [
     {
       "src": "/api/webhook",
-      "dest": "/api/webhook.py",
+      "dest": "api/webhook.py",
       "methods": ["POST"]
     }
   ],
   "env": {
-    "TELEGRAM_TOKEN": "@telegram-token",
-    "TELEGRAM_CHAT_ID": "@telegram-chat-id"
+    "TELEGRAM_TOKEN": "@telegram_token",
+    "TELEGRAM_CHAT_ID": "@telegram_chat_id"
+  },
+  "functions": {
+    "telegram_bot.py": {
+      "memory": 3008,
+      "maxDuration": 60
+    }
   }
 } 
